--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -658,6 +658,8 @@
     <string name="sound_vibrate_in_call_title">Vibrate during calls</string>
     <string name="sound_vibrate_in_call_summary_off">Notifications will not vibrate during a call</string>
     <string name="sound_vibrate_in_call_summary_on">Notifications will vibrate normally</string>
+    <string name="sound_default_volume_media_title">Default volume media</string>
+    <string name="sound_default_volume_media_summary">Make volume control default to media instead of ringer</string>
     <string name="sound_lock_volume_keys_title">Lock volume keys</string>
     <string name="sound_lock_volume_keys_summary">Prevents accidental unset of silent mode by pressing volume keys</string>
     <string name="sound_camera_shutter_disable_title">Mute camera shutter</string>
