--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -115,13 +115,15 @@
     <string name="ui_status_bar_color_title">Status bar background color</string>
     <string name="ui_status_bar_color_summary">Reboot required</string>
     <string name="pref_transparent_status_bar_title">Status bar appearance</string>
-    <string name="pref_transparent_status_bar_summary">Default, transparent, or user defined color.  Reboot required.</string>
+    <string name="pref_transparent_status_bar_summary">Theme, ROM, transparent, or user defined color.  Reboot required.</string>
 
-    <string name="ui_notification_background_color_title">Notification dropdown background color</string>
+    <string name="ui_notification_background_color_title">Notification dropdown\nbackground color</string>
+    <string name="ui_notification_background_color_dialog_title">Notification dropdown background color</string>
     <string name="ui_notification_background_color_summary">Reboot required</string>
-    <string name="pref_transparent_notification_background_title">Notification dropdown background appearance</string>
-    <string name="pref_transparent_notification_background_summary">Default, transparent, or user defined color.  Reboot required.</string>
-
+    <string name="pref_transparent_notification_background_title">Notification dropdown\nbackground</string>
+    <string name="pref_transparent_notification_background_dialog_title">Notification dropdown background</string>
+    <string name="pref_transparent_notification_background_summary">Theme, ROM, transparent,\nuser defined color, or special.\nReboot required.</string>
+ 
     <string name="ui_status_bar_toggle_brightness">Status bar brightness control</string>
     <string name="ui_status_bar_toggle_brightness_summary">Allows adjusting of brightness by sliding across statusbar</string>
     <string name="ui_status_bar_toggle_info">Automatic brightness is enabled</string>
